--- a/cinema-hall-management-system/cinema-hall-management-system.csproj
+++ b/cinema-hall-management-system/cinema-hall-management-system.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BL\Employee.cs" />
     <Compile Include="BL\User.cs" />
     <Compile Include="DAL\DatabaseConnector.cs" />
+    <Compile Include="Model\CinemaHall.cs" />
     <Compile Include="Model\Employee.cs" />
     <Compile Include="Model\Movie.cs" />
     <Compile Include="Model\User.cs" />
