--- a/cinema-hall-management-system/cinema-hall-management-system.csproj
+++ b/cinema-hall-management-system/cinema-hall-management-system.csproj
@@ -59,11 +59,13 @@
     <Compile Include="BL\CinemaHall.cs" />
     <Compile Include="BL\Employee.cs" />
     <Compile Include="BL\Movie.cs" />
+    <Compile Include="BL\MovieShow.cs" />
     <Compile Include="BL\User.cs" />
     <Compile Include="DAL\DatabaseConnector.cs" />
     <Compile Include="Model\CinemaHall.cs" />
     <Compile Include="Model\Employee.cs" />
     <Compile Include="Model\Movie.cs" />
+    <Compile Include="Model\MovieShow.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="UI\AddCinemaHall.xaml.cs">
       <DependentUpon>AddCinemaHall.xaml</DependentUpon>
@@ -91,6 +93,9 @@
     </Compile>
     <Compile Include="UI\Movies.xaml.cs">
       <DependentUpon>Movies.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\MovieShows.xaml.cs">
+      <DependentUpon>MovieShows.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\RemoveCinemahall.xaml.cs">
       <DependentUpon>RemoveCinemahall.xaml</DependentUpon>
@@ -158,6 +163,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\MovieShows.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\RemoveCinemahall.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -209,6 +218,5 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
