--- a/cinema-hall-management-system/cinema-hall-management-system.csproj
+++ b/cinema-hall-management-system/cinema-hall-management-system.csproj
@@ -106,6 +106,9 @@
     <Compile Include="UI\RemoveMovie.xaml.cs">
       <DependentUpon>RemoveMovie.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\RemoveMovieShow.xaml.cs">
+      <DependentUpon>RemoveMovieShow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\UpdateCinemaHall.xaml.cs">
       <DependentUpon>UpdateCinemaHall.xaml</DependentUpon>
     </Compile>
@@ -179,6 +182,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\RemoveMovie.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\RemoveMovieShow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
